--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
     <div>
       <h1>Exoplanets</h1>
 
-      NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.
+      <table border="1">
+        <caption>NASA has announced the discovery of over 1000 exoplanets—below are five important discoveries.</caption>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Orbiting star</th>
+            <th>Year of discovery</th>
+            <th>Distance</th>
+            <th>Notes</th>
+          </tr>
+        </thead>
 
-      Name
-      Orbiting star
-      Year of discovery
-      Distance
-      Notes
+
+
+
+
+
 
       PSR B1257+12 A
       Lich pulsar
